--fixed loading of mega-menu data. --initialization of mega-menu on non-home page --add mega-menu on mobile page

--- a/src/app/shared/widgets/header/header.component.css
+++ b/src/app/shared/widgets/header/header.component.css
@@ -3,7 +3,7 @@
 	top: 0;
 	width: 100%;
 	z-index: 101;
-	background-color: #f4f1eb; 
+	background-color: #f4f1eb;
 }
 
 .buyer-popup-overlay{
@@ -78,7 +78,7 @@
   position: fixed;
   height: 100%;
   width: 100%;
-  top: 110px;
+  top: 0;
   left: 0;
   z-index: 56;
   background-color: rgba(0,0,0,0.5);
